--- a/index.html
+++ b/index.html
@@ -50,10 +50,6 @@
         <h2 id="nt">New Testament</h2>
     </div>
     
-    <script scr="main.js"></script>
+    <script scr="main.ts"></script>
 </head>
-<body>
-
-
-</body>
 </html>
